add_subdirectory(db_proxy)
add_subdirectory(login)
add_subdirectory(player)
add_subdirectory(game)
add_subdirectory(ds_mgr)
add_subdirectory(master)
add_subdirectory(proxy)
add_subdirectory(world)
add_subdirectory(robot)
add_subdirectory(global)
add_subdirectory(match)
add_subdirectory(room)
add_subdirectory(gm)
