cmake_minimum_required(VERSION 2.8)

include("../global.cmake")

add_subdirectory(t1_hello_plugin)
add_subdirectory(t2_hello_property)
add_subdirectory(t3_hello_event)
add_subdirectory(t4_hello_async)
add_subdirectory(t5_hello_http_server)
add_subdirectory(t6_hello_navigation)
add_subdirectory(t7_hello_redis)
